# soccer_vision_2d_layers

./: CMakeLists.txt  README.md  dependencies.repos  package.xml  plugins.xml
.github/workflows/: build_and_test_galactic.yaml  build_and_test_humble.yaml  build_and_test_rolling.yaml
include/soccer_vision_2d_layers/: ball.hpp  ball_array.hpp  field_boundary.hpp  goalpost.hpp  goalpost_array.hpp  marking_ellipse.hpp  marking_ellipse_array.hpp  marking_intersection.hpp  marking_intersection_array.hpp  marking_segment.hpp  marking_segment_array.hpp  obstacle.hpp  obstacle_array.hpp  robot.hpp  robot_array.hpp  visibility_control.h
include/soccer_vision_msgs_layers/: ball.hpp  ball_array.hpp  ball_array_layer.hpp  ball_layer.hpp  field_boundary.hpp  goalpost.hpp  goalpost_array.hpp  marking_ellipse.hpp  marking_ellipse_array.hpp  marking_intersection.hpp  marking_intersection_array.hpp  marking_segment.hpp  marking_segment_array.hpp  obstacle.hpp  obstacle_array.hpp  robot.hpp  robot_array.hpp  visibility_control.h
include/soccer_vision_msgs_overlay/: ball_array_layer.hpp  visibility_control.h
src/: ball.cpp  ball_array.cpp  ball_array_layer.cpp  ball_layer.cpp  confidence.cpp  confidence.hpp  field_boundary.cpp  goalpost.cpp  goalpost_array.cpp  marking_ellipse.cpp  marking_ellipse_array.cpp  marking_intersection.cpp  marking_intersection_array.cpp  marking_segment.cpp  marking_segment_array.cpp  obstacle.cpp  obstacle_array.cpp  robot.cpp  robot_array.cpp
